  * linux-kbuild: Include scripts/Makefile.* (Closes: #815593)
  * Makefile.inc, rules.real: Fix conflation of $(DESTDIR) and $(prefix)
  * hyperv-daemons: Fix rule redefinition that 'make' warns about
  * debian/control: Build-Depend on dh-python, as dh_python2 warns we should
  * lockdep: Add '+' prefix to make invocation, so it can be parallelised

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 22 Feb 2016 23:21:57 +0000

linux-tools (4.5~rc5-1~exp3) experimental; urgency=medium

  * Adjust build fix from unstable

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 21 Feb 2016 23:45:04 +0000

linux-tools (4.5~rc5-1~exp2) experimental; urgency=medium

  * Merge build fix from unstable

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 21 Feb 2016 17:40:52 +0000

linux-tools (4.5~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * lockdep: Add missing macros
  * Adjust VPATH to work for check-hyperv (and simplify the modpost wrapper)
  * tools/build: Remove bpf() run-time check at build time

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 21 Feb 2016 16:45:52 +0000

linux-tools (4.4-4) unstable; urgency=medium

  * hyperv-daemons: Only build the progarams on x86 (fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 21 Feb 2016 16:57:55 +0000

linux-tools (4.4-3) unstable; urgency=medium

  * hyperv-daemons: Add init scripts

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 21 Feb 2016 15:07:55 +0000

linux-tools (4.4-2) unstable; urgency=medium

  * linux-perf: Include version number in strace groups installation directory
    (Closes: #813080)
  * [alpha,sh4] Attempt to fix build failures
  * Build fixdep under debian/build and clean it up properly

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 19 Feb 2016 17:11:29 +0000

linux-tools (4.4-1) unstable; urgency=medium

  * Upload to unstable

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 18 Feb 2016 01:30:50 +0000

linux-tools (4.4-1~exp2) experimental; urgency=medium
