@@ -10,11 +10,10 @@ Signed-off-by: Ben Hutchings <ben@decadent.org.uk>
 ---
 --- a/tools/build/feature/test-bpf.c
 +++ b/tools/build/feature/test-bpf.c
-@@ -27,10 +27,5 @@ int main(void)
- 	attr.log_level = 0;
+@@ -28,9 +28,5 @@ int main(void)
  	attr.kern_version = 0;
  
--	attr = attr;
+ 	attr = attr;
 -	/*
 -	 * Test existence of __NR_bpf and BPF_PROG_LOAD.
 -	 * This call should fail if we run the testcase.
