@@ -6,6 +6,7 @@ linux-tools (4.5~rc5-1~exp4) UNRELEASED; urgency=medium
   * hyperv-daemons: Fix rule redefinition that 'make' warns about
   * debian/control: Build-Depend on dh-python, as dh_python2 warns we should
   * lockdep: Add '+' prefix to make invocation, so it can be parallelised
+  * tools/build: Fix 'unused variable' warning in the bpf() feature check
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 22 Feb 2016 23:21:57 +0000
 
